--- a/Linear-Regression_Ecommerce Customer/Linear Regression - Ecommerce Customer.ipynb
+++ b/Linear-Regression_Ecommerce Customer/Linear Regression - Ecommerce Customer.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ecommerce Customer - Example Case\n",
+    "### Linear Regression - Ecommerce Customer\n",
     "\n",
     "using Python and Scikit-learn to apply linear regression to a fictional case:\n",
-    "- contract work with an Ecommerce company based in New York City \n",
     "- company sells clothing online but they also have in-store style and clothing advice sessions\n",
     "- Customers come in to the store, have sessions/meetings with a personal stylist, then they can go home and order either on a mobile app or website for the clothes they want\n",
     "\n",
