--- a/Linear-Regression_Ecommerce Customer/Linear Regression - Ecommerce Customer.ipynb
+++ b/Linear-Regression_Ecommerce Customer/Linear Regression - Ecommerce Customer.ipynb
@@ -10,7 +10,7 @@
     "- company sells clothing online but they also have in-store style and clothing advice sessions\n",
     "- Customers come in to the store, have sessions/meetings with a personal stylist, then they can go home and order either on a mobile app or website for the clothes they want\n",
     "\n",
-    "- company is trying to decide whether to focus their efforts on their mobile app experience or their website\n",
+    "- company is trying to decide whether to focus their efforts on their mobile app experience or their website\n"
    ]
   },
   {
